# tp1_conculandia

./: CMakeLists.txt  main.cpp  personas.txt
Fifos/: CMakeLists.txt
Modelo/: CMakeLists.txt  FilaEspera.cpp  FilaEspera.h  Persona.cpp  Persona.h  Ventanilla.cpp  Ventanilla.h
Util/: CMakeLists.txt  Menu.cpp  Menu.h  Util.cpp  Util.h
